exports[`events reducer should handle FETCH_EVENT_DETAILS_FAILURE 1`] = `
Object {
  "count": 0,
  "error": [Error: Fetch event details failure],
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle FETCH_EVENT_DETAILS_REQUEST 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": 1,
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle FETCH_EVENT_DETAILS_SUCCESS 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": Object {
    "UserId": 1,
    "color": "#a5dfd8",
    "createdAt": "2016-10-26T07:06:39.152Z",
    "dateEnd": "2016-12-06T02:03:56.063Z",
    "dateStart": "2016-05-23T17:38:11.010Z",
    "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
    "id": 1,
    "image": null,
    "title": "nihil voluptas rerum",
    "updatedAt": "2016-10-26T07:06:39.152Z",
  },
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle FETCH_EVENTS_FAILURE 1`] = `
Object {
  "count": 0,
  "error": [Error: Fetch events failed.],
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle FETCH_EVENTS_NEARBY_SUCCESS 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "eventsNearby": Array [
    Object {
      "id": 1,
    },
    Object {
      "id": 2,
    },
  ],
  "isLoading": false,
  "nearbyEvents": Array [
    Object {
      "PlaceId": 2178,
      "UserId": 1,
      "color": "#017778",
      "createdAt": "2016-12-15T13:17:52.972Z",
      "dateEnd": "2016-12-17T18:22:59.335Z",
      "dateStart": "2016-12-17T16:22:59.335Z",
      "deletedAt": null,
      "description": "Aut voluptatem dolor molestiae aspernatur voluptatem. Sit non et provident facilis ea nisi est quaerat numquam. Voluptatem debitis ducimus accusantium error repellat illo veniam. Voluptas ducimus et iste placeat magnam ad asperiores error atque. Unde voluptatem est reiciendis cumque et deserunt at. Dolor repellat vel et qui suscipit dolorem. Ea sequi tenetur sint ab omnis. Vitae consequatur impedit aperiam harum et necessitatibus aliquam. Dolores eaque sint voluptate saepe ducimus iure saepe. Voluptatem accusamus molestias iure blanditiis rerum dolores in harum. Id ut nesciunt consequuntur cum quia officiis. Rerum quibusdam vitae odit dolores architecto sunt minima nihil reiciendis. Aut laborum enim totam sed quo libero harum tempora. Perferendis est voluptatum aspernatur quisquam eum architecto amet corrupti. Atque nobis vel dolor. Voluptatem consequatur rerum dolor.",
      "distance": 0,
      "id": 2178,
      "image": "378b6f77-bbed-443b-8e3f-ad738fb98c8e.jpg",
      "title": "Dolores eveniet asperiores optio.",
      "updatedAt": "2016-12-15T13:17:52.972Z",
    },
    Object {
      "PlaceId": 2996,
      "UserId": 1,
      "color": "#4e625f",
      "createdAt": "2016-12-15T13:20:36.589Z",
      "dateEnd": "2016-12-26T07:36:56.574Z",
      "dateStart": "2016-12-26T05:36:56.574Z",
      "deletedAt": null,
      "description": "Officiis explicabo cum iure cumque minima impedit. Nesciunt expedita ipsum. Aliquid vero labore molestias. Voluptatum aut quod repellendus numquam veritatis aut nihil. Dolorem facilis eius sit laudantium quia sunt ratione praesentium voluptates. Ut qui eaque dolores expedita et. Error minus occaecati veniam illum. Voluptas porro ipsam facere odit. Molestias unde veritatis placeat. Ex consequatur a qui eum et id nihil ex. Facere aliquid veritatis est cupiditate qui. Ut impedit quasi. Et ipsa aliquam et rem quia commodi aspernatur fugit laudantium. Explicabo a doloribus. Distinctio repellendus dolor. Possimus cumque eligendi dolor alias.",
      "distance": 0,
      "id": 2996,
      "image": "b2407517-48e6-4d41-95cb-2779ee7fab17.jpg",
      "title": "Iure nemo qui omnis.",
      "updatedAt": "2016-12-15T13:20:36.589Z",
    },
  ],
}
`;

exports[`events reducer should handle FETCH_EVENTS_REQUEST 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "isLoading": true,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle FETCH_EVENTS_SUCCESS 1`] = `
Object {
  "count": 2,
  "error": null,
  "eventCount": 2,
  "eventDetails": null,
  "events": Array [
    Object {
      "UserId": 1,
      "color": "#a5dfd8",
      "createdAt": "2016-10-26T07:06:39.152Z",
      "dateEnd": "2016-12-06T02:03:56.063Z",
      "dateStart": "2016-05-23T17:38:11.010Z",
      "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
      "id": 1,
      "image": null,
      "title": "nihil voluptas rerum",
      "updatedAt": "2016-10-26T07:06:39.152Z",
    },
    Object {
      "UserId": 1,
      "color": "#33ed3f",
      "createdAt": "2016-10-26T07:06:40.243Z",
      "dateEnd": "2017-08-27T03:37:53.566Z",
      "dateStart": "2016-07-04T18:33:59.969Z",
      "description": "Sequi sit minima quae totam dolores suscipit. Vero exercitationem repellendus velit. Earum ullam unde explicabo earum. Corporis architecto ab quisquam consectetur. Odio odit aliquid ex sint consequatur similique. Aut et occaecati saepe rem cupiditate et veritatis aut. Similique molestias eveniet libero labore est laboriosam. Molestiae reiciendis error neque dignissimos.",
      "id": 2,
      "image": null,
      "title": "voluptatem eos nostrum",
      "updatedAt": "2016-10-26T07:06:40.243Z",
    },
  ],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle INCREASE_PAGE 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should handle RESET_EVENTS_NEARBY 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "eventsNearby": Array [
    Object {
      "id": 1,
    },
    Object {
      "id": 2,
    },
  ],
  "isLoading": false,
  "nearbyEvents": null,
}
`;

exports[`events reducer should return the initial state 1`] = `
Object {
  "count": 0,
  "error": null,
  "eventCount": 0,
  "eventDetails": null,
  "events": Array [],
  "isLoading": false,
  "nearbyEvents": null,
}
`;
